Update WebGL build

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
+      var loaderUrl = buildUrl + "/GoneViral.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGLBuild.data",
-        frameworkUrl: buildUrl + "/WebGLBuild.framework.js",
-        codeUrl: buildUrl + "/WebGLBuild.wasm",
+        dataUrl: buildUrl + "/GoneViral.data",
+        frameworkUrl: buildUrl + "/GoneViral.framework.js",
+        codeUrl: buildUrl + "/GoneViral.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "austinpeel",
         productName: "gone_viral",
